compiler/testData/diagnostics/tests/regressions/ea69735.fir.kt
enum class MyEnum {
    // Here we have a problem 
    // while checking on a deprecated super constructor
    FIRST<!SYNTAX!><!SYNTAX!><!>:<!>
}